Subpixel layout broken with spans with CSS position other than static https://bugs.webkit.org/show_bug.cgi?id=90097

Patch by Behdad Esfahbod <behdad@behdad.org> on 2012-07-05
Reviewed by Eric Seidel.

In InlineBox, don't truncate size to integers when returning.

In RenderBlock, don't round-up width to next integer.  Round-up to
next LayoutUnit instead.

Test: Added fast/sub-pixel/size-of-span-with-different-positions.html
Adjust expected outputs affected by the rounding changes.

* platform/FractionalLayoutUnit.h:
(WebCore::FractionalLayoutUnit::fromFloatCeil):
(FractionalLayoutUnit):
* rendering/InlineBox.h:
(WebCore::InlineBox::size):
* rendering/RenderBlock.cpp:
(WebCore::updatePreferredWidth):

Canonical link: https://commits.webkit.org/108475@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121917 268f45cc-cd09-0410-ab3c-d52691b4dbfc